src/app/components/Card/Card.module.scss
@use '../../variables' as v;

// taken from https://www.w3schools.com/howto/howto_css_flip_card.asp

// The flip card container - set the width and height to whatever you want.
.flipCard {
  background-color: transparent;
  min-width: 100px;
  width: 100%;
  max-width: 400px;
  margin: 30px 20px;
  aspect-ratio: 5/4;
  perspective: 1000px; /* Remove this if you don't want the 3D effect */

  &:hover .flipCardInner {
    transform: rotateY(180deg);
  }
}

/* This container is needed to position the front and back side */
.flipCardInner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.3s;
  transform-style: preserve-3d;
}

/* Position the front and back side */
.flipCardFront,
.flipCardBack {
  display: flex;
  justify-content: center;
  align-items: center;

  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;

  border-radius: 20;
}

/* Style the front side (fallback if image is missing) */
.flipCardFront {
  background-color: rgb(230, 206, 102);
  color: black;
}

/* Style the back side */
.flipCardBack {
  background-color: v.$color-secondary;
  color: black;
  transform: rotateY(180deg);
}

